[package]
description = "Banana split decoding implementation in Rust"
license = "Apache-2.0"
name = "banana_recovery"
version = "0.1.0"
authors = ["Alexander Slesarev <slesarew@gmail.com>", "Vera Abramova <abramova.vera@gmail.com>"]
edition = "2021"
repository = "https://github.com/paritytech/banana-recovery-rust"
homepage = "https://github.com/paritytech/banana-recovery-rust"
keywords = ["shamir", "banana_split", "signer", "parity"]

[dependencies]
base64 = "0.21"
bitvec = "1.0"
hex = "0.4"
json = "0.12"
scrypt = "0.11"
sha2 = "0.10"
xsalsa20poly1305 = "0.9"
zeroize = {version = "1.6", features = ["alloc", "derive"]}
thiserror = "1.0"

[lib]
name = "banana_recovery"
crate-type = ["lib"]
